--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <table align="center" border="0" style="width: 100%; max-width: 550px; height: auto; margin: 0 auto; border-collapse: collapse; background-color:#ffffff;">
 	<tbody>
     	<tr>
-        <td width="100%" max-width="550px" align="center"><img src="https://dp.image-gmkt.com/dp2016/Mall/2018/09/18/779967d7-64b8-4944-af97-f04ae02c46ac.jpg" width="550px" height="auto"><br/><br/></td>
+        <td width="100%" max-width="550px" align="center"><img src="https://drive.google.com/uc?export=view&id=18O6LEjGVuxH51Q7Lt-JbfIGKB4jZCDkm" width="550px" height="auto"><br/><br/></td>
         </tr>
         
         <tr>
