--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </tr>
         
         <tr>
-        <td width="100%" max-width="550px" align="center"><img src="https://dp.image-gmkt.com/dp2016/Mall/2018/09/18/0ed8b164-0eb2-4b4a-81af-5dbc1a78b26b.jpg" width="550px" height="auto"><br/><br/><br/></td>
+        <td width="100%" max-width="550px" align="center"><img src="https://drive.google.com/uc?export=view&id=1gkeARdP9Tk0Qioqquu960AejiW2k225j" width="550px" height="auto"><br/><br/><br/></td>
         </tr>
         
         <tr>
