--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
 </head>
 
 <body>
+
+<style>
+@font-face {
+  font-family: 'scoutcondregular';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://www.fossil-asia.com/fonts/scoutcond_regular.otf') format('opentype');
+ }
+@font-face {
+  font-family: 'scoutregular';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://www.fossil-asia.com/fonts/scout_regular.otf') format('opentype');
+ }
+@font-face {
+  font-family: 'scoutlight';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://www.fossil-asia.com/fonts/scout_light.otf') format('opentype');
+ }
+</style>
+	
 <table align="center" border="0" style="width: 100%; max-width: 550px; height: auto; margin: 0 auto; border-collapse: collapse; background-color:#ffffff;">
 	<tbody>
     	<tr>
