--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</tr>
         
         <tr>
-        <td width="100%" max-width="600px" align="center"><img src="https://drive.google.com/uc?export=view&id=18KoafjnqQMA-3GkTX50mATBI1am_yKat" width="25%" height="auto"><br/><br/></td>
+        <td width="100%" max-width="600px" align="center"><img src="https://drive.google.com/uc?export=view&id=18KoafjnqQMA-3GkTX50mATBI1am_yKat" width="25%" height="auto"></td>
         </tr>
         
         <tr>
